--- a/fergie_time/pubspec.yaml
+++ b/fergie_time/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   hexcolor: ^2.0.6
+  http: ^0.13.4
   path_provider: ^2.0.9
   splashscreen: ^1.3.5
   sqflite: ^2.0.2
