--- a/fergie_time/pubspec.yaml
+++ b/fergie_time/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
+  dio: ^4.0.6
   flutter:
     sdk: flutter
   hexcolor: ^2.0.6
